force-app/main/default/objects/Architect__c/Architect__c.object-meta.xml
<CustomObject>
    <label>Referral</label>
    <nameField>
        <label>Reference Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reference List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>