force-app/main/default/objects/Architect__c/fields/Area_Location__c.field-meta.xml
<CustomField>
    <fullName>Area_Location__c</fullName>
    <label>Area/Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>