force-app/main/default/objects/Architect__c/fields/Contact_with_MG_Employee__c.field-meta.xml
<CustomField>
    <fullName>Contact_with_MG_Employee__c</fullName>
    <label>Contact with MG Employee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>