force-app/main/default/objects/Architect__c/fields/Firm__c.field-meta.xml
<CustomField>
    <fullName>Firm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Firm</label>
    <referenceTo>Firm__c</referenceTo>
    <relationshipName>Architects</relationshipName>
    <type>Lookup</type>
</CustomField>