force-app/main/default/objects/Architect__c/fields/Google_Map_Location__c.field-meta.xml
<CustomField>
    <fullName>Google_Map_Location__c</fullName>
    <label>Google Map Location</label>
    <type>Url</type>
</CustomField>