force-app/main/default/objects/Architect__c/fields/Legacy__c.field-meta.xml
<CustomField>
    <fullName>Legacy__c</fullName>
    <label>Legacy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>