force-app/main/default/objects/Architect__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diamond (Above 1cr)</fullName>
            </value>
            <value>
                <fullName>Platinum (Below 1cr)</fullName>
            </value>
            <value>
                <fullName>Gold (Below 50L)</fullName>
            </value>
            <value>
                <fullName>Silver (Below 10L)</fullName>
            </value>
            <value>
                <fullName>High Potential</fullName>
                <isActive>false</isActive>
                <label>High Potential</label>
            </value>
            <value>
                <fullName>Low Potential</fullName>
                <isActive>false</isActive>
                <label>Low Potential</label>
            </value>
            <value>
                <fullName>Moderate Potential</fullName>
                <isActive>false</isActive>
                <label>Moderate Potential</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>