force-app/main/default/objects/Architect__c/validationRules/Phone_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Phone_Number__c, &quot;^[0-9]{10}$&quot;))</errorConditionFormula>
    <errorDisplayField>Phone_Number__c</errorDisplayField>
    <errorMessage>Enter a valid 10-digit phone number.</errorMessage>
</ValidationRule>