force-app/main/default/objects/Architect__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reference_Type__c</columns>
    <columns>Phone_Number__c</columns>
    <columns>Firm__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>